--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/jobs" # the subpath of your site, e.g. /blog
-url: "http://www1.nyc.gov/site/planning/index.page" # the base hostname & protocol for your site
+url: "http://nycplanning.github.io" # the base hostname & protocol for your site
 twitter_username: NYCPlanning
 github_username:  nycplanning
 
